--- a/assets/css/modules/_header.scss
+++ b/assets/css/modules/_header.scss
@@ -18,6 +18,6 @@
 
 .site-title {
 	font-size: .8em;
-	color: #aaa;
+	color: #767676;
 	font-weight: 400;
 }
